--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ jenkins.base-url=<tbr>
 jenkins.port=<tbr>
 jenkins.path=<tbr>
 jenkins.cookie=<tbr>
+jenkins.https=<tbr>
 
 
 %dev.quarkus.http.port=8181
